build/log/idf_py_stderr_output_335606
/home/joagz/esp-idf/projects/web-esp32/main/web-esp32.c: In function 'app_main':
/home/joagz/esp-idf/projects/web-esp32/main/web-esp32.c:43:5: error: expected ',' or ';' before 'setMapping'
   43 |     setMapping(home);
      |     ^~~~~~~~~~
/home/joagz/esp-idf/projects/web-esp32/main/web-esp32.c:39:20: warning: unused variable 'styles' [-Wunused-variable]
   39 |     struct mapping styles = {
      |                    ^~~~~~
/home/joagz/esp-idf/projects/web-esp32/main/web-esp32.c:35:20: warning: unused variable 'home' [-Wunused-variable]
   35 |     struct mapping home = {
      |                    ^~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/web-esp32.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:5484: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
